--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
         </ul>
        </ul>
       </div>                              
-      <div class="col-lg-4">
+      <div class="col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
           <img src="images/khateeb-k-8SQ0fRvQMew-unsplash.jpg" alt="Nandhi hills" width="875" height="335">
       </div>               
   </div>
