--- a/about.html
+++ b/about.html
@@ -40,11 +40,11 @@
 </nav>
 
   
-    <div class="jumbotron   " style ="background-image: url(images/IMG_20190804_093942.jpg);" >
-            <div class="container  ">
+    <div class="jumbotron col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mb-12 " style ="background-color: wheat;" >
+            <div class="container col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mb-12  ">
         <h1 class="display-3 " >"Hillocks borrowed from heaven"</h1>
-        <h1 class="display-4"> Nandi Hills Tourism</h1>
-        <p class="lead">
+        <h1 class="display-3"> Nandi Hills Tourism</h1>
+        <p class="water">
          
           Located around 60 kilometres away from Bangalore, Nandi Hills is one such tourist spot that has gradually been discovered by visitors over the years and has now become a well-known weekend getaway.
           
